@@ -6,161 +6,9 @@
 
     <groupId>group.xc</groupId>
     <artifactId>flinkexp</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
-    <dependencies>
-        <dependency>
-            <groupId>org.apache.flink</groupId>
-            <artifactId>flink-java</artifactId>
-            <version>1.9.0</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.flink</groupId>
-            <artifactId>flink-streaming-java_2.11</artifactId>
-            <version>1.9.0</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.flink</groupId>
-            <artifactId>flink-clients_2.11</artifactId>
-            <version>1.9.0</version>
-            <scope>provided</scope>
-        </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.apache.flink</groupId>-->
-<!--            <artifactId>flink-hbase_2.11</artifactId>-->
-<!--            <version>1.9.0</version>-->
-<!--        </dependency>-->
-        <dependency>
-            <groupId>com.alibaba.hbase</groupId>
-            <artifactId>alihbase-connector</artifactId>
-            <version>2.0.8</version>
-            <scope>compile</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-common</artifactId>
-            <version>2.7.1</version>
-        </dependency>
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-            <version>1.2.61</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>3.3.2</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mongodb.mongo-hadoop</groupId>
-            <artifactId>mongo-hadoop-core</artifactId>
-            <version>2.0.1</version>
-            <scope>compile</scope>
-        </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.apache.storm</groupId>-->
-<!--            <artifactId>storm-core</artifactId>-->
-<!--            <version>1.0.2</version>-->
-<!--            &lt;!&ndash;可见范围为provided时，打包时不会对依赖进行打包，但在本地测试开发时应该注释掉，否则程序无法运行&ndash;&gt;-->
-<!--            &lt;!&ndash;另外不需要打包storm的依赖是因为，集群中已经有storm的相关依赖jar包了&ndash;&gt;-->
-<!--            <scope>provided</scope>-->
-<!--        </dependency>-->
-    </dependencies>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                    <encoding>UTF-8</encoding>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>net.alchim31.maven</groupId>
-                <artifactId>scala-maven-plugin</artifactId>
-                <version>3.2.2</version>
-                <executions>
-                    <execution>
-                        <id>eclipse-add-source</id>
-                        <goals>
-                            <goal>add-source</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>scala-compile-first</id>
-                        <phase>process-resources</phase>
-                        <goals>
-                            <goal>compile</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>scala-test-compile-first</id>
-                        <phase>process-test-resources</phase>
-                        <goals>
-                            <goal>testCompile</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>attach-scaladocs</id>
-                        <phase>verify</phase>
-                        <goals>
-                            <goal>doc-jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <scalaVersion>2.11.8</scalaVersion>
-                    <recompileMode>incremental</recompileMode>
-                    <useZincServer>true</useZincServer>
-                    <args>
-                        <arg>-unchecked</arg>
-                        <arg>-deprecation</arg>
-                        <arg>-feature</arg>
-                    </args>
-                    <!--<jvmArgs>-->
-                    <!--<jvmArg>-Xms1024m</jvmArg>-->
-                    <!--<jvmArg>-Xmx1024m</jvmArg>-->
-                    <!--<jvmArg>-XX:PermSize=${PermGen}</jvmArg>-->
-                    <!--<jvmArg>-XX:MaxPermSize=${MaxPermGen}</jvmArg>-->
-                    <!--<jvmArg>-XX:ReservedCodeCacheSize=${CodeCacheSize}</jvmArg>-->
-                    <!--</jvmArgs>-->
-                </configuration>
-            </plugin>
-<!--            <plugin>-->
-<!--                <groupId>org.apache.maven.plugins</groupId>-->
-<!--                <artifactId>maven-assembly-plugin</artifactId>-->
-<!--                <version>2.6</version>-->
-<!--                <executions>-->
-<!--                       <execution>&lt;!&ndash; 配置执行器 &ndash;&gt;-->
-<!--                         <id>make-assembly</id>-->
-<!--                         <phase>package</phase>&lt;!&ndash; 绑定到package生命周期阶段上 &ndash;&gt;-->
-<!--                         <goals>-->
-<!--                               <goal>single</goal>&lt;!&ndash; 只运行一次 &ndash;&gt;-->
-<!--                             </goals>-->
-<!--                           <configuration>-->
-<!--                               <descriptor>src/main/resources/package.xml</descriptor>-->
-<!--                           </configuration>-->
-<!--                       </execution>-->
-<!--                     </executions>-->
-
-<!--            </plugin>-->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <version>2.6</version>
-                <configuration>
-                    <descriptorRefs>
-                        <descriptorRef>jar-with-dependencies</descriptorRef>
-                    </descriptorRefs>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+    <modules>
+        <module>study</module>
+    </modules>
 </project>
